--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-   <canvas id="canvas" width="860" height="860"></canvas>
+   <canvas id="canvas"></canvas>
    <script type="text/javascript" src="script.js">
    </script>
 </body>
